1 - uwsgi.ini changes 2 - flask form update 3 - added message for empty matches

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -6,5 +6,6 @@ socket = recyclebin.sock
 chmod-socket = 660
 vacuum = true
 die-on-term = true
-http=127.0.0.1:8000
+#http=127.0.0.1:8000
 log-format = [%(ltime)] - %(var.HTTP_X_FORWARDED_FOR) - %(user)  "%(method) %(uri) %(proto)" %(status) %(size)
+log-to = /var/log/recyclebin.log
